[project]
dynamic = ["version"]
name = "taihe"
description = "Language-neutral API tooling"
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "antlr4-tools>=0.2.1",
    "black>=25.1.0",
    "coverage>=7.8.0",
    "pyre-check>=0.9.23",
    "pytest>=8.3.5",
    "removestar>=1.5.2",
    "ruff>=0.11.6",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.black]
exclude = "taihe/parse/antlr"
target-version = ['py310']

[tool.ruff]
target-version = 'py310'

# Don't check generated code.
exclude = ["taihe/parse/antlr/*.py"]

# See all rules at https://beta.ruff.rs/docs/rules/
lint.select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "I", # isort
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q", # flake8-quotes
    "UP", # pyupgrade
    "PT", # flake8-pytest-style
    "RUF", # Ruff-specific rules
]

lint.ignore = [
    "E501", # "Line too long"
    # -> "line length already regulated by black"
    "PT011", # "pytest.raises() should specify expected exception"
    # -> "would imply to update tests every time you update exception message"
    "SIM108",
    "F541", # "f-string without any placeholders"
    "E731",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107", # -> "Missing docstring in public function too restrictive"
    "UP007", # Allow `Optional[T]`
    "SIM117", # allow multiple `with` statements in code generator
]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
