# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(arraybuffer)
add_subdirectory(async)
add_subdirectory(basic_abilities)
add_subdirectory(bigint)
add_subdirectory(binding)
add_subdirectory(callback)
add_subdirectory(external_obj)
add_subdirectory(hello_ani)
add_subdirectory(hello_world)
add_subdirectory(inheritance)
add_subdirectory(interface)
add_subdirectory(namespace)
add_subdirectory(optional)
add_subdirectory(javalike_overload)
add_subdirectory(override)
add_subdirectory(union_embed)
add_subdirectory(inherit)
add_subdirectory(import)
add_subdirectory(enum_union)
add_subdirectory(typedarray)
add_subdirectory(on_off)
add_subdirectory(struct_extends)
add_subdirectory(unwrap_obj)
add_subdirectory(class_extend)
add_subdirectory(external_obj_extend)
add_subdirectory(null_undefined)
add_subdirectory(callback_compare)
add_subdirectory(export_default)
add_subdirectory(polymorphism)
add_subdirectory(reversed)
add_subdirectory(multiple_inherit)
add_subdirectory(rename_example)
add_subdirectory(new_on_off)