add_subdirectory(ani_array)
add_subdirectory(ani_arraybuffer)
add_subdirectory(ani_async)
add_subdirectory(ani_basetype)
add_subdirectory(ani_bigint)
add_subdirectory(ani_callback)
# add_subdirectory(ani_enum)
add_subdirectory(ani_finalization)
add_subdirectory(ani_function)
add_subdirectory(ani_iface)
add_subdirectory(ani_import)
add_subdirectory(ani_inject)
# add_subdirectory(ani_keep_name)
add_subdirectory(ani_maythrow)
add_subdirectory(ani_namespace)
add_subdirectory(ani_on_off)
add_subdirectory(ani_opaque)
add_subdirectory(ani_optional)
add_subdirectory(ani_overload)
add_subdirectory(ani_primitives)
add_subdirectory(ani_record)
add_subdirectory(ani_session)
add_subdirectory(ani_static)
add_subdirectory(ani_string)
add_subdirectory(ani_struct)
add_subdirectory(ani_struct_extend)
add_subdirectory(ani_test)
add_subdirectory(ani_typedarray)
add_subdirectory(ani_union)
add_subdirectory(ani_thread)
add_subdirectory(ani_bundle)
add_subdirectory(ani_bundlemanager)
add_subdirectory(ani_graphics3d)
add_subdirectory(ani_polymorphism)
add_subdirectory(ani_fixedarray)

# add_subdirectory(ani_huks)
# add_subdirectory(ani_image)
