# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/compiler/taihe_compiler.gni")


taihe_compiler("integer_test_author_compiler") {
  sources = [
    "../idl/integer.arithmetic.taihe",
    "../idl/integer.io.taihe"
  ]
  mode = "author"
}

config("integer_test_author_config") {
  include_dirs = [
    "$taihe_out_include_path",
  ]
}

shared_library("author") {
  sources = [ 
    "./src/integer.arithmetic.impl.c",
    "./src/integer.arithmetic.impl.cpp",
    "./src/integer.io.impl.cpp",
  ]
  deps = [
    ":integer_test_author_compiler",
  ]
  public_configs = [
    ":integer_test_author_config",
  ]
  lib_dirs = [ taihe_out_librt_path ]
  libs = ["taihe-rt"]
  ldflags = ["-Wl,-rpath,$taihe_out_librt_path"]
}