import("//build/compiler/taihe_compiler.gni")

taihe_compiler("integer_test_user_compiler") {
  sources = [
    "../idl/integer.arithmetic.taihe",
    "../idl/integer.io.taihe"
  ]
  mode = "user"
}

executable("user") {
  sources = [ 
    "./src/main.cpp",
  ]
  deps = [
    ":integer_test_user_compiler",
    "//author:author"
  ]
  ldpath = rebase_path("$root_out_dir")
  ldflags = ["-Wl,-rpath,$ldpath"]
}